--- a/new2.html
+++ b/new2.html
@@ -4,6 +4,7 @@
  </head>
  <body>
  <h1>reg</h1>
+ <p>hello</p>
  <form onsubmit="return validate()" method="post">
  Name:<input type="text" id="name" placeholder="enter your name"><br>
  Email:<input type="text" id="email" placeholder="enter your email"><br>
